[package]
name = "neospeller"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = { version = "1.0.138" }
serde = { version = "1.0", features = ["derive"] }
mockito = "1.7.0"
firestore = "0.48"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.23"
